# q3rcon-cli

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: publish.yml
src/q3rcon_cli/: __about__.py  __init__.py  cli.py  config.py  console.py
src/q3rcon_cli/commands/: __init__.py  fastrestart.py  gametype.py  hostname.py  map.py  mapname.py  maprestart.py  maprotate.py  plugins.py  status.py
src/q3rcon_cli/subcommands/: __init__.py  fastrestart.py  gametype.py  mapname.py  maprestart.py
tools/: update_readme_help.py
