[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "q3rcon-cli"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [{ name = "onyx-and-iris", email = "code@onyxandiris.online" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["aio-q3-rcon>=1.0.0", "clypi>=1.8.2"]

[project.scripts]
q3rcon-cli = "q3rcon_cli.cli:main"

[project.urls]
Documentation = "https://github.com/onyx-and-iris/q3rcon-cli#readme"
Issues = "https://github.com/onyx-and-iris/q3rcon-cli/issues"
Source = "https://github.com/onyx-and-iris/q3rcon-cli"

[tool.hatch.version]
path = "src/q3rcon_cli/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/q3rcon_cli tests}"

[tool.coverage.run]
source_pkgs = ["q3rcon_cli", "tests"]
branch = true
parallel = true
omit = ["src/q3rcon_cli/__about__.py"]

[tool.coverage.paths]
q3rcon_cli = ["src/q3rcon_cli", "*/q3rcon-cli/src/q3rcon_cli"]
tests = ["tests", "*/q3rcon-cli/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
